--- a/auth/src/main/resources/templates/login.html
+++ b/auth/src/main/resources/templates/login.html
@@ -1,1 +1,3 @@
 hier muss das Formular rein
+<!--https://www.baeldung.com/spring-security-login-->
+<!--ändern in securityConfig.java, https://stackoverflow.com/questions/67108758/how-can-we-change-the-default-spring-boot-login-page-->
