added usertable api

--- a/auth/src/main/resources/templates/dashboard.html
+++ b/auth/src/main/resources/templates/dashboard.html
@@ -170,7 +170,7 @@
                 "processing": true,
                 "serverSide": false,
                 "ajax": {
-                    "url": " ", // noch Endpunkt zur Abfrage einbinden wie bsplw. "/users"
+                    "url": "localhost:8080/tableuser", // noch Endpunkt zur Abfrage einbinden wie bsplw. "/users"
                     "dataSrc": "data",
                 },
                 "columns": [
