--- a/auth/src/main/resources/templates/dashboard.html
+++ b/auth/src/main/resources/templates/dashboard.html
@@ -1,203 +1,195 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-    xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5" class="h-100">
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5" class="h-100">
 
-    <head>
-        <meta charset="utf-8">
-        <meta content="width=device-width, initial-scale=1.0" name="viewport">
+<head>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-        <!-- Datatables CSS -->
-        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap5.min.css">
-        
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.datatables.net/2.0.5/css/dataTables.dataTables.css" />
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Datatables CSS -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap5.min.css">
 
-        <title th:text="${title}"></title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css">
 
-        <!--/* Favicons */-->
+    <title th:text="${title}"></title>
 
+    <!--/* Favicons */-->
 
-        <meta name="msapplication-TileColor" content="#da532c">
-        <meta name="theme-color" content="#ffffff">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 
-        
-        <style>
+    <style>
+    </style>
 
-        </style>     
+</head>
 
-		
+<body>
+<!-- Nav Bar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">LTL Enterprise</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{main}">Home</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Your Profile
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" th:href="@{dashboard}">Settings</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" th:href="@{logout}">Logout</a>
+                </div>
+            </li>
+        </ul>
+    </div>
+</nav>
+<!-- End Nav Bar -->
 
-    </head>
-    <body>
-    <!-- Nav Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">LTL Enterprise</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{main}">Home</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Your Profile
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" th:href="@{dashboard}">Settings</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" th:href="@{logout}">Logout</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <!-- End Nav Bar -->
-
-    <div class="container mt-5">
-        <h1>User Management</h1>
-            <table id="userTable" class="table table-striped table-bordered">
-                <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Username</th>
-                    <th>Department</th>
-                    <th>Actions</th>
-                </tr>
-                </thead>
-                <tbody>
-                <!-- Benutzerdaten werden hier eingefügt -->
-                </tbody>
-            </table>
-        <!-- Modal for adding/editing user -->
-        <div class="modal fade" id="userModal" tabindex="-1" aria-labelledby="userModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="userModalLabel">Add/Edit User</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <!-- Form for adding/editing user -->
-                        <form id="userForm">
-                            <input type="hidden" id="userId">
-                            <div class="form-row">
-                                <div class="form-group col-md-6">
-                                    <label for="firstName">First Name</label>
-                                    <input type="text" class="form-control" id="firstName" name="firstName">
-                                </div>
-                                <div class="form-group col-md-6">
-                                    <label for="lastName">Last Name</label>
-                                    <input type="text" class="form-control" id="lastName" name="lastName">
-                                </div>
+<div class="container mt-5">
+    <h1>User Management</h1>
+    <table id="userTable" class="table table-striped table-bordered">
+        <thead>
+        <tr>
+            <th>ID</th>
+            <th>Username</th>
+            <th>Department</th>
+            <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        <!-- Benutzerdaten werden hier eingefügt -->
+        </tbody>
+    </table>
+    <!-- Modal for adding/editing user -->
+    <div class="modal fade" id="userModal" tabindex="-1" aria-labelledby="userModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="userModalLabel">Add/Edit User</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!-- Form for adding/editing user -->
+                    <form id="userForm">
+                        <input type="hidden" id="userId">
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="firstName">First Name</label>
+                                <input type="text" class="form-control" id="firstName" name="firstName">
                             </div>
-                            <div class="form-row">
-                                <div class="form-group col-md-6">
-                                    <label for="email">Email</label>
-                                    <input type="email" class="form-control" id="email" name="email">
-                                </div>
-                                <div class="form-group col-md-6">
-                                    <label for="phoneNumber">Phone Number</label>
-                                    <input type="tel" class="form-control" id="phoneNumber" name="phoneNumber">
-                                </div>
+                            <div class="form-group col-md-6">
+                                <label for="lastName">Last Name</label>
+                                <input type="text" class="form-control" id="lastName" name="lastName">
                             </div>
-                            <div class="form-row">
-                                <div class="form-group col-md-6">
-                                    <label for="birthday">Birthday</label>
-                                    <input type="date" class="form-control" id="birthday" name="birthday">
-                                </div>
-                                <div class="form-group col-md-6">
-                                    <label for="department">Department</label>
-                                    <input type="text" class="form-control" id="department" name="department">
-                                </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="email">Email</label>
+                                <input type="email" class="form-control" id="email" name="email">
                             </div>
-                            <div class="form-row">
-                                <div class="form-group col-md-6">
-                                    <label for="password">Password</label>
-                                    <input type="password" class="form-control" id="password" name="password">
-                                </div>
-                                <div class="form-group col-md-6">
-                                    <label for="role">Role</label>
-                                    <select id="role" class="form-control" name="role">
-                                        <option selected>Choose...</option>
-                                        <option value="Admin">Admin</option>
-                                        <option value="User">User</option>
-                                    </select>
-                                </div>
+                            <div class="form-group col-md-6">
+                                <label for="phoneNumber">Phone Number</label>
+                                <input type="tel" class="form-control" id="phoneNumber" name="phoneNumber">
                             </div>
-                            <div class="form-group">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="isActive" name="isActive">
-                                    <label class="form-check-label" for="isActive">
-                                        Active
-                                    </label>
-                                </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="birthday">Birthday</label>
+                                <input type="date" class="form-control" id="birthday" name="birthday">
                             </div>
-                            <button type="submit" class="btn btn-primary">Save</button>
-                        </form>
-                    </div>
+                            <div class="form-group col-md-6">
+                                <label for="department">Department</label>
+                                <input type="text" class="form-control" id="department" name="department">
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="password">Password</label>
+                                <input type="password" class="form-control" id="password" name="password">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="role">Role</label>
+                                <select id="role" class="form-control" name="role">
+                                    <option selected>Choose...</option>
+                                    <option value="Admin">Admin</option>
+                                    <option value="User">User</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="isActive" name="isActive">
+                                <label class="form-check-label" for="isActive">
+                                    Active
+                                </label>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Save</button>
+                    </form>
                 </div>
             </div>
         </div>
-        <!-- Button to open modal for adding/editing user -->
-        <button type="button" class="btn btn-success mt-3" data-toggle="modal" data-target="#userModal">
-            Add User
-        </button>
-
     </div>
+    <!-- Button to open modal for adding/editing user -->
+    <button type="button" class="btn btn-success mt-3" data-toggle="modal" data-target="#userModal">
+        Add User
+    </button>
 
-    <!-- Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
-    <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <!-- Datatables JS -->
-    <script src="https://cdn.datatables.net/2.0.6/js/dataTables.bootstrap5.js"></script>
-    <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
+</div>
 
-    <script>
-        $(document).ready(function() {
-            $('#userTable').DataTable({
-                "processing": true,
-                "serverSide": false,
-                "ajax": {
-                    "url": "localhost:8080/tableuser", // noch Endpunkt zur Abfrage einbinden wie bsplw. "/users"
-                    "dataSrc": "data",
-                },
-                "columns": [
-                    {"data": "id"},
-                    {"data": "username"},
-                    {"data": "department"},
-                    {
-                        "data": null,
-                        "render": function (data, type, row) {
-                            return '<button class="btn btn-danger" onclick="deleteUser(' + row.id + ')">Löschen</button>' +
-                                '<button class="btn btn-primary ml-2" onclick="editUser(' + row.id + ')">Bearbeiten</button>';
-                        }
-                    }
-                ]
-            });
+<!-- jQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+<!-- Bootstrap 5 -->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
+
+<!-- Datatables JS -->
+<script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap5.min.js"></script>
+
+<script>
+    $(document).ready(function () {
+        $.ajax({
+            url: '/tableusers',
+            type: 'GET',
+            success: function (data) {
+                var table = $('#userTable').DataTable();
+                $.each(data, function (index, user) {
+                    var editButton = '<button class="btn btn-primary" onclick="editUser(' + user.id + ')" data-toggle="modal" data-target="#userModal">Edit</button>';
+                    var deleteButton = '<button class="btn btn-danger" onclick="deleteUser(' + user.id + ')">Delete</button>';
+                    table.row.add([user.id, user.username, user.department, editButton + deleteButton]).draw();
+                });
+            },
+            error: function (xhr, status, error) {
+                console.error(error);
+            }
         });
-        function deleteUser(id) {
-            // TODO Code zum Löschen eines Benutzers mit der angegebenen ID
-            console.log("Benutzer gelöscht: " + id);
-        }
+    });
 
-        function editUser(id) {
-            // TODO Code zum Bearbeiten eines Benutzers mit der angegebenen ID
-            console.log("Benutzer bearbeiten: " + id);
-        }
-    </script>
+    function deleteUser(id) {
+        // TODO Code zum Löschen eines Benutzers mit der angegebenen ID
+        console.log("Benutzer gelöscht: " + id);
+    }
 
+    function editUser(id) {
+        // TODO Code zum Bearbeiten eines Benutzers mit der angegebenen ID
+        console.log("Benutzer bearbeiten: " + id);
+    }
+</script>
 
-    </body>
-</html>  
+</body>
+
+</html>
