--- a/auth/src/main/resources/templates/dashboard.html
+++ b/auth/src/main/resources/templates/dashboard.html
@@ -86,6 +86,10 @@
                         <input type="hidden" id="userId">
                         <div class="form-row">
                             <div class="form-group col-md-6">
+                                <label for="username">Username</label>
+                                <input type="text" class="form-control" id="username" name="username">
+                            </div>
+                            <div class="form-group col-md-6">
                                 <label for="firstName">First Name</label>
                                 <input type="text" class="form-control" id="firstName" name="firstName">
                             </div>
@@ -161,7 +165,67 @@
 <script src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap5.min.js"></script>
 
 <script>
+    // TODO bei add User leeres Modal anzeigen anstatt den User den man vorhin hatte
+    function editUser(id) {
+        $.ajax({
+            url: '/tableusers/' + id,
+            type: 'GET',
+            success: function (userData) {
+
+                $('#userId').val(userData.id);
+                $('#username').val(userData.username);
+                $('#firstName').val(userData.firstName);
+                $('#lastName').val(userData.lastName);
+                $('#email').val(userData.email);
+                $('#phoneNumber').val(userData.phoneNumber);
+                $('#birthday').val(userData.birthday);
+                $('#department').val(userData.department);
+                $('#password').val("");
+                $('#role').val(userData.role);
+                $('#isActive').prop('checked', userData.isActive);
+
+                $('#userModal').modal('show');
+            },
+            error: function (xhr, status, error) {
+                console.error("Fehler beim Laden der Benutzerdaten:", error);
+            }
+        });
+    }
+
     $(document).ready(function () {
+        $('#userForm').submit(function (event) {
+            event.preventDefault();
+
+            var userData = {
+                id: $('#userId').val(),
+                username: $('#username').val(),
+                firstName: $('#firstName').val(),
+                lastName: $('#lastName').val(),
+                email: $('#email').val(),
+                phoneNumber: $('#phoneNumber').val(),
+                birthday: $('#birthday').val(),
+                department: $('#department').val(),
+                password: $('#password').val(),
+                role: $('#role').val(),
+                isActive: $('#isActive').is(':checked')
+            };
+
+            $.ajax({
+                url: '/saveuser',
+                type: 'POST',
+                contentType: 'application/json',
+                data: JSON.stringify(userData),
+                success: function (response) {
+
+                    $('#userModal').modal('hide');
+                },
+                error: function (xhr, status, error) {
+                    console.error("Fehler beim Speichern der Benutzerdaten:", error);
+
+                }
+            });
+        });
+
         $.ajax({
             url: '/tableusers',
             type: 'GET',
@@ -179,15 +243,6 @@
         });
     });
 
-    function deleteUser(id) {
-        // TODO Code zum Löschen eines Benutzers mit der angegebenen ID
-        console.log("Benutzer gelöscht: " + id);
-    }
-
-    function editUser(id) {
-        // TODO Code zum Bearbeiten eines Benutzers mit der angegebenen ID
-        console.log("Benutzer bearbeiten: " + id);
-    }
 </script>
 
 </body>
